due to fix ShiftRow component

--- a/client/src/stylesheets/Header.css
+++ b/client/src/stylesheets/Header.css
@@ -13,7 +13,7 @@ div.header-sidebar {
 
 div.header-mainbar {
   width: 90%;
-  padding: 0 2em;
+  padding: 0 1em;
   display: flex;
   justify-content: space-between;
   align-items: center;
