--- a/client/src/stylesheets/Rosters.css
+++ b/client/src/stylesheets/Rosters.css
@@ -13,5 +13,5 @@ div.rosters-flags {
 
 div.rosters-date {
   width: 90%;
-  padding: 0 2em;
+  padding: 1em;
 }
